
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************

 * (02/26/2012) kivan
	#268
	
	CHANGED: EDEDClient update
	CHANGED: minor changes in db mapping and sql due to changes of data storage logic in EEG Base
	
	Bugs still persists.

 * (02/26/2012) kivan
	#267
	
	CHANGED: mappings, updated EDEDClient and DataSyncer logic. Not functional yet due to error on the side of EEG base.
	
	Previous bugs are still present, will be fixed in upcomming commits.

 * (02/23/2012) kivan
	#266
	
	This is other :backup: commit.
	FIXED: deadlock during downloading files
	INTERNAL: because Hibernate over JDBC creates for each session its thread, it is neccessary explicitely create own session and close it after work is done!
		For creating such work a bit easier, HibernateUtil.createActiveSession and HibernateUtil.reattachObject is available.
	
	Known bugs(solving in progress) 
		- AWT thread does not "refresh" GUI while multiple files are downloaded (don't know why yet)
		- upload is now working (upload experiments cannot change primary key of existing record, upload data files throws exception about transient objects)

 * (02/22/2012) kivan
	#265
	
	CHANGED: DataSyncer - added upload
	FIXED: Downloader - fixed potential deadlock during download
	
	Note: many bugs have occurred (mostly due to Derby and Hibernate) - please, have patience, all will be fixed.
	Commit was neccessary in order to prevent possible losing data.

 * (02/21/2012) kivan
	#264
	
	CHANGED: derby.sql and mappings - added "ADDED" property in order to distinguish new records in db
	CHANGED: BlobViewer, ImportWizard and ExperimentOverview are now closable by Escape key stroke
	INTERNAL: LoginDialogLogic - KeyListener removed, instead are Keystrokes Enter and Escape above focused windows